--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aqui se hara un blogpost</h1>
-    <p>Este es el parrafo de inicio</p>    
+    <div id="container">
+        <div>
+            <h1>Este es el titulo atractivo es interesante del
+                blogpost</h1>
+            <p>Este es el parrafo de inicio donde
+                explicaremos lo que se puede hacer con ramas</p>
+        </div>
+    </div>    
 </body>
 </html>
