--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hipervlog
+            <span id="tagline"> Tu blog</span>
         </div>
         <div>
             <h1>Este es el titulo atractivo es interesante del
