Agregado el contenido adicional del blog y otra tipo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,10 +10,15 @@
 <body>
     <div id="container">
         <div>
-            <h1>Este es el titulo atractivo es interesante del
+            <h1>Este es el titulo atractivo e interesante del
                 blogpost</h1>
             <p>Este es el parrafo de inicio donde
                 explicaremos lo que se puede hacer con ramas</p>
+            <p>
+                los blogs son la mejor forma de compartir
+                informacion e ideas. blabla muchas mas locuras que
+                pone freddy siempre.
+            </p>
         </div>
     </div>    
 </body>
